@@ -159,15 +159,23 @@ condition|)
 block|{
 name|iw
 operator|.
-name|abortMerges
+name|commit
+argument_list|()
+expr_stmt|;
+name|iw
+operator|.
+name|rollback
 argument_list|()
 expr_stmt|;
 block|}
+else|else
+block|{
 name|iw
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
 name|getRunData
 argument_list|()
 operator|.
