@@ -4861,7 +4861,7 @@ specifier|final
 name|InfoStream
 name|infoStream
 decl_stmt|;
-comment|/**    * Forces merge policy to merge segments until there are    * {@code<= maxNumSegments}.  The actual merges to be    * executed are determined by the {@link MergePolicy}.    *    *<p>This is a horribly costly operation, especially when    * you pass a small {@code maxNumSegments}; usually you    * should only call this if the index is static (will no    * longer be changed).</p>    *    *<p>Note that this requires free space that is proportional    * to the size of the index in your Directory (2X if you're    * using compound file format). For example, if your index    * size is 10 MB then you need an additional 10 MB free for    * this to complete (20 MB if you're using compound file    * format). This is also affected by the {@link Codec} that    * is used to execute the merge, and may result in even a    * bigger index. Also, it's best to call {@link #commit()}    * afterwards, to allow IndexWriter to free up disk space.</p>    *    *<p>If some but not all readers re-open while merging    * is underway, this will cause {@code> 2X} temporary    * space to be consumed as those new readers will then    * hold open the temporary segments at that time.  It is    * best not to re-open readers while merging is running.</p>    *    *<p>The actual temporary usage could be much less than    * these figures (it depends on many factors).</p>    *    *<p>In general, once this completes, the total size of the    * index will be less than the size of the starting index.    * It could be quite a bit smaller (if there were many    * pending deletes) or just slightly smaller.</p>    *    *<p>If an Exception is hit, for example    * due to disk full, the index will not be corrupted and no    * documents will be lost.  However, it may have    * been partially merged (some segments were merged but    * not all), and it's possible that one of the segments in    * the index will be in non-compound format even when    * using compound file format.  This will occur when the    * Exception is hit during conversion of the segment into    * compound format.</p>    *    *<p>This call will merge those segments present in    * the index when the call started.  If other threads are    * still adding documents and flushing segments, those    * newly created segments will not be merged unless you    * call forceMerge again.</p>    *    *<p><b>NOTE</b>: if you call {@link #abortMerges}, which    * aborts all running merges, then any thread still    * running this method might hit a {@link    * MergePolicy.MergeAbortedException}.    *    * @param maxNumSegments maximum number of segments left    * in the index after merging finishes    *     * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    * @see MergePolicy#findMerges    *   */
+comment|/**    * Forces merge policy to merge segments until there are    * {@code<= maxNumSegments}.  The actual merges to be    * executed are determined by the {@link MergePolicy}.    *    *<p>This is a horribly costly operation, especially when    * you pass a small {@code maxNumSegments}; usually you    * should only call this if the index is static (will no    * longer be changed).</p>    *    *<p>Note that this requires free space that is proportional    * to the size of the index in your Directory (2X if you're    * using compound file format). For example, if your index    * size is 10 MB then you need an additional 10 MB free for    * this to complete (20 MB if you're using compound file    * format). This is also affected by the {@link Codec} that    * is used to execute the merge, and may result in even a    * bigger index. Also, it's best to call {@link #commit()}    * afterwards, to allow IndexWriter to free up disk space.</p>    *    *<p>If some but not all readers re-open while merging    * is underway, this will cause {@code> 2X} temporary    * space to be consumed as those new readers will then    * hold open the temporary segments at that time.  It is    * best not to re-open readers while merging is running.</p>    *    *<p>The actual temporary usage could be much less than    * these figures (it depends on many factors).</p>    *    *<p>In general, once this completes, the total size of the    * index will be less than the size of the starting index.    * It could be quite a bit smaller (if there were many    * pending deletes) or just slightly smaller.</p>    *    *<p>If an Exception is hit, for example    * due to disk full, the index will not be corrupted and no    * documents will be lost.  However, it may have    * been partially merged (some segments were merged but    * not all), and it's possible that one of the segments in    * the index will be in non-compound format even when    * using compound file format.  This will occur when the    * Exception is hit during conversion of the segment into    * compound format.</p>    *    *<p>This call will merge those segments present in    * the index when the call started.  If other threads are    * still adding documents and flushing segments, those    * newly created segments will not be merged unless you    * call forceMerge again.</p>    *    * @param maxNumSegments maximum number of segments left    * in the index after merging finishes    *     * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    * @see MergePolicy#findMerges    *   */
 DECL|method|forceMerge
 specifier|public
 name|void
@@ -5266,7 +5266,7 @@ return|return
 literal|false
 return|;
 block|}
-comment|/** Just like {@link #forceMergeDeletes()}, except you can    *  specify whether the call should block until the    *  operation completes.  This is only meaningful with a    *  {@link MergeScheduler} that is able to run merges in    *  background threads.    *    *<p><b>NOTE</b>: if you call {@link #abortMerges}, which    * aborts all running merges, then any thread still    * running this method might hit a {@link    * MergePolicy.MergeAbortedException}. */
+comment|/** Just like {@link #forceMergeDeletes()}, except you can    *  specify whether the call should block until the    *  operation completes.  This is only meaningful with a    *  {@link MergeScheduler} that is able to run merges in    *  background threads. */
 DECL|method|forceMergeDeletes
 specifier|public
 name|void
@@ -6547,7 +6547,7 @@ block|}
 block|}
 comment|/** Aborts running merges.  Be careful when using this    *  method: when you abort a long-running merge, you lose    *  a lot of work that must later be redone. */
 DECL|method|abortMerges
-specifier|public
+specifier|private
 specifier|synchronized
 name|void
 name|abortMerges
@@ -6740,7 +6740,6 @@ block|}
 block|}
 comment|/**    * Wait for any currently outstanding merges to finish.    *    *<p>It is guaranteed that any merges started prior to calling this method    *    will have completed once this method completes.</p>    */
 DECL|method|waitForMerges
-specifier|public
 name|void
 name|waitForMerges
 parameter_list|()
@@ -7808,7 +7807,7 @@ name|maybeMerge
 argument_list|()
 expr_stmt|;
 block|}
-comment|/**    * Merges the provided indexes into this index.    *     *<p>    * The provided IndexReaders are not closed.    *     *<p>    * See {@link #addIndexes} for details on transactional semantics, temporary    * free space required in the Directory, and non-CFS segments on an Exception.    *     *<p>    *<b>NOTE:</b> empty segments are dropped by this method and not added to this    * index.    *     *<p>    *<b>NOTE:</b> this method merges all given {@link IndexReader}s in one    * merge. If you intend to merge a large number of readers, it may be better    * to call this method multiple times, each time with a small set of readers.    * In principle, if you use a merge policy with a {@code mergeFactor} or    * {@code maxMergeAtOnce} parameter, you should pass that many readers in one    * call.    *     *<p>    *<b>NOTE</b>: if you call {@link #abortMerges}, which    * aborts all running merges, then any thread still running this method might    * hit a {@link MergePolicy.MergeAbortedException}.    *     * @throws CorruptIndexException    *           if the index is corrupt    * @throws IOException    *           if there is a low-level IO error    */
+comment|/**    * Merges the provided indexes into this index.    *     *<p>    * The provided IndexReaders are not closed.    *     *<p>    * See {@link #addIndexes} for details on transactional semantics, temporary    * free space required in the Directory, and non-CFS segments on an Exception.    *     *<p>    *<b>NOTE:</b> empty segments are dropped by this method and not added to this    * index.    *     *<p>    *<b>NOTE:</b> this method merges all given {@link IndexReader}s in one    * merge. If you intend to merge a large number of readers, it may be better    * to call this method multiple times, each time with a small set of readers.    * In principle, if you use a merge policy with a {@code mergeFactor} or    * {@code maxMergeAtOnce} parameter, you should pass that many readers in one    * call.    *     * @throws CorruptIndexException    *           if the index is corrupt    * @throws IOException    *           if there is a low-level IO error    */
 DECL|method|addIndexes
 specifier|public
 name|void
