@@ -4426,16 +4426,18 @@ condition|)
 block|{
 name|writer2
 operator|.
-name|abortMerges
-argument_list|()
-expr_stmt|;
-block|}
-comment|//writer2.close();
-name|writer2
-operator|.
 name|rollback
 argument_list|()
 expr_stmt|;
+block|}
+else|else
+block|{
+name|writer2
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 DECL|method|closeDir
 name|void
