@@ -2887,7 +2887,7 @@ condition|)
 block|{
 name|mainWriter
 operator|.
-name|waitForMerges
+name|close
 argument_list|()
 expr_stmt|;
 block|}
@@ -2895,15 +2895,10 @@ else|else
 block|{
 name|mainWriter
 operator|.
-name|abortMerges
+name|rollback
 argument_list|()
 expr_stmt|;
 block|}
-name|mainWriter
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
 block|}
 DECL|method|closeDir
 name|void
@@ -2926,6 +2921,7 @@ condition|;
 name|i
 operator|++
 control|)
+block|{
 name|readers
 index|[
 name|i
@@ -2934,6 +2930,7 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
 name|addDir
 operator|.
 name|close
