@@ -4003,26 +4003,11 @@ operator|!=
 literal|null
 condition|)
 block|{
-try|try
-block|{
-if|if
-condition|(
-name|indexWriterCloseWaitsForMerges
-condition|)
-name|writer
-operator|.
-name|waitForMerges
-argument_list|()
-expr_stmt|;
-block|}
-finally|finally
-block|{
 name|writer
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 block|}
 finally|finally
